--- a/.env
+++ b/.env
@@ -1,11 +1,9 @@
-WP_URL=http://35.179.96.64/graphql
+WP_URL=http://13.40.129.162/graphql
 
-NEXT_PUBLIC_WORDPRESS_SITE_URL=http://35.179.96.64
+NEXT_PUBLIC_WORDPRESS_SITE_URL=http://13.40.129.162
 
-NEXT_PUBLIC_SITE_URL=https://link-city.vercel.app/
+NEXT_PUBLIC_SITE_URL=https://seo-for-hire.vercel.app/
 
 
 NEXT_PUBLIC_API_URL=http://localhost:3000
 
-user=smartmovementmarketing@gmail.com
-pass=upxcxrukjqwdzjdk
