--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "LinkCity",
+  "name": "SeoforHire",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@heroicons/react": "^1.0.6",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
