--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.27.1",
+    "react-modal": "^3.14.4",
     "sass": "^1.45.1",
     "sharp": "^0.29.3"
   },
