--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "prop-types": "^15.8.0",
     "react": "^17.0.2",
     "react-dom": "17.0.2",
+    "react-fast-marquee": "^1.3.1",
     "react-hook-form": "^7.27.1",
     "react-modal": "^3.14.4",
+    "react-spring": "^9.4.4",
     "sass": "^1.45.1",
     "sharp": "^0.29.3"
   },
