--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.21",
     "lodash.isequal": "^4.5.0",
     "next": "^12.1.0",
+    "next-connect": "^0.12.2",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "npm": "^8.5.5",
