--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "react-fast-marquee": "^1.3.1",
     "react-hook-form": "^7.27.1",
     "react-modal": "^3.14.4",
-    "react-spring": "^9.4.4",
     "sass": "^1.45.1",
-    "sharp": "^0.29.3"
+    "sharp": "^0.29.3",
+    "swiper": "^8.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.1",
