--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ WP_URL=http://13.40.129.162/graphql
 
 NEXT_PUBLIC_WORDPRESS_SITE_URL=http://13.40.129.162
 
-NEXT_PUBLIC_SITE_URL=https://seoforhire.co
+NEXT_PUBLIC_SITE_URL=https://seo-for-hire.vercel.app/
 
 
-NEXT_PUBLIC_API_URL=https://seoforhire.co
+NEXT_PUBLIC_API_URL=https://seoforhire.co/
 
 user=josh@seoforhire.co
 pass=jhqmpynacreaajfs
