--- a/.env
+++ b/.env
@@ -4,8 +4,10 @@ NEXT_PUBLIC_WORDPRESS_SITE_URL=http://13.40.129.162
 
 NEXT_PUBLIC_SITE_URL=https://www.seoforhire.co
 
-
 NEXT_PUBLIC_API_URL=https://www.seoforhire.co
 
 user=josh@seoforhire.co
 pass=jhqmpynacreaajfs
+
+=UUk2pgXG3gyYZY_hs3f0HgaQ
+AIzaSyAII8CfbChK6ZZHAQH-r1hdorxVmPXB3kE
