--- a/package.json
+++ b/package.json
@@ -36,10 +36,8 @@
     "react-dom": "17.0.2",
     "react-fast-marquee": "^1.3.1",
     "react-hook-form": "^7.27.1",
-    "react-modal": "^3.14.4",
     "sass": "^1.45.1",
-    "sharp": "^0.29.3",
-    "swiper": "^8.1.4"
+    "sharp": "^0.29.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.1",
