--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "17.0.2",
     "react-fast-marquee": "^1.3.1",
     "react-hook-form": "^7.27.1",
+    "react-player": "^2.10.1",
     "sass": "^1.45.1",
     "sharp": "^0.29.3"
   },
