--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
-WP_URL=http://13.40.129.162/graphql
-
-NEXT_PUBLIC_WORDPRESS_SITE_URL=http://13.40.129.162
+NEXT_PUBLIC_SANITY_DATASET=production
+NEXT_PUBLIC_SANITY_PROJECT_ID=xookaimp
 
 NEXT_PUBLIC_SITE_URL=https://www.seoforhire.co
 
