--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-NEXT_PUBLIC_SANITY_DATASET=production
-NEXT_PUBLIC_SANITY_PROJECT_ID=xookaimp
+WP_URL=http://13.40.129.162/graphql
+
+NEXT_PUBLIC_WORDPRESS_SITE_URL=http://13.40.129.162
 
 NEXT_PUBLIC_SITE_URL=https://www.seoforhire.co
 
@@ -10,3 +11,6 @@ pass=jhqmpynacreaajfs
 
 YOUTUBE_PLAYLIST_ID=PLddfICrcF15Erloc1JRHMghdqxONKmiDP
 YOUTUBE_API_KEY=AIzaSyAII8CfbChK6ZZHAQH-r1hdorxVmPXB3kE
+
+NEXT_PUBLIC_SANITY_DATASET=production
+NEXT_PUBLIC_SANITY_PROJECT_ID=xookaimp
