--- a/.env
+++ b/.env
@@ -14,3 +14,4 @@ YOUTUBE_API_KEY=AIzaSyDTSmoIHH_VeEPkZXQ3lsqcfrq557eZVlY
 
 NEXT_PUBLIC_SANITY_DATASET=production
 NEXT_PUBLIC_SANITY_PROJECT_ID=xookaimp
+NEXT_PUBLIC_DATA_TO_PAGE_SECRET_KEY=s5de11d6f5249fccfcc7a89947c8d7dff
