--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "graphql": "^16.3.0",
     "lodash": "^4.17.21",
     "lodash.isequal": "^4.5.0",
-    "next": "^12.1.0",
+    "next": "^12.2.4",
     "next-connect": "^0.12.2",
     "next-sanity": "^0.5.2",
     "nodemailer": "^6.7.2",
@@ -41,10 +41,14 @@
     "react-hook-form": "^7.27.1",
     "react-player": "^2.10.1",
     "react-portable-text": "^0.4.3",
+    "recharts": "^2.1.12",
     "sass": "^1.45.1",
-    "sharp": "^0.29.3"
+    "sharp": "^0.29.3",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/node": "^18.7.1",
+    "@types/react": "^18.0.17",
     "autoprefixer": "^10.4.1",
     "eslint": "^8.7.0",
     "eslint-config-google": "^0.14.0",
